--- a/src/games/connectFour/_Game.scss
+++ b/src/games/connectFour/_Game.scss
@@ -1,5 +1,4 @@
-
-$cellSize: 130px;
+$cellSize: 100px;
 $falling-duration: 0.5s;
 $bounce-height: 7px;
 
@@ -41,6 +40,7 @@ $bounce-height: 7px;
         user-select: none;
         display: flex;
         gap: 20px;
+        align-items: center;
 
         div:not(.number-timer)::after {
           content: "";
@@ -146,112 +146,165 @@ $bounce-height: 7px;
       }
     }
   }
-
-  .field-main {
+  .field-wrapper {
+    display: flex;
+    justify-content: center;
     position: relative;
-    width: fit-content;
-    height: fit-content;
+    padding: 20px 0;
+    width: 100%;
+    .field-main {
+      position: relative;
+      width: fit-content;
+      height: fit-content;
 
-    .field {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
-      overflow: hidden;
-      border-radius: 5%;
-
-      .row {
+      .field {
         display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        overflow: hidden;
+        border-radius: 5%;
 
-        .cell {
-          position: relative;
-          width: $cellSize;
-          height: $cellSize;
-          overflow: hidden;
+        .row {
+          display: flex;
 
-          &::after {
-            content: "";
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            width: calc($cellSize * 0.75);
-            height: calc($cellSize * 0.75);
-            background-color: transparent;
-            border-radius: 50%;
-            box-shadow: 0 0 0 200px #232930;
-            transform: translate(-50%, -50%);
-            background: var(--after-color, transparent);
+          .cell {
+            position: relative;
+            width: $cellSize;
+            height: $cellSize;
+            overflow: hidden;
+
+            &::after {
+              content: "";
+              position: absolute;
+              top: 50%;
+              left: 50%;
+              width: calc($cellSize * 0.75);
+              height: calc($cellSize * 0.75);
+              background-color: transparent;
+              border-radius: 50%;
+              box-shadow: 0 0 0 200px #232930;
+              transform: translate(-50%, -50%);
+              background: var(--after-color, transparent);
+            }
+
+            &.hovered-col::after {
+              box-shadow: 0 0 0 200px lighten(#232930, 1.7%);
+            }
           }
+        }
+      }
 
-          &.hovered-col::after {
-            box-shadow: 0 0 0 200px lighten(#232930, 1.7%);
+      .field-with-checkers {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: -1;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+
+        .row {
+          display: flex;
+
+          .cell {
+            position: relative;
+            width: $cellSize;
+            height: $cellSize;
+            overflow: hidden;
+
+            &.last-checker::before {
+              content: "";
+              position: absolute;
+              top: 50%;
+              left: 50%;
+              width: calc($cellSize * 0.13);
+              height: calc($cellSize * 0.13);
+              border-radius: 50%;
+              transform: translate(-50%, -50%);
+              background: darken($light-background, 10);
+              z-index: 1;
+            }
+
+            &::after {
+              content: "";
+              position: absolute;
+              top: 50%;
+              left: 50%;
+              width: calc($cellSize * 0.75);
+              height: calc($cellSize * 0.75);
+              border-radius: 50%;
+              transform: translate(-50%, -50%);
+              background: var(--after-color, transparent);
+            }
+
+            &.hovered-by-player-1::after {
+              background-color: rgba(var(--player-color-1), 0.4);
+            }
+            &.hovered-by-player-2::after {
+              background-color: rgba(var(--player-color-2), 0.4);
+            }
+            &.active-by-player-1::after {
+              background-color: rgb(var(--player-color-1));
+            }
+            &.active-by-player-2::after {
+              background-color: rgb(var(--player-color-2));
+            }
+
+            &.falling {
+              animation: fallAnimation $falling-duration ease-out forwards;
+            }
           }
         }
       }
     }
-
-    .field-with-checkers {
-      width: 100%;
-      height: 100%;
+    .pause-overlay {
       position: absolute;
       top: 0;
       left: 0;
-      z-index: -1;
+      right: 0;
+      bottom: 0;
+      backdrop-filter: blur(5px);
+      background: rgba(0, 0, 0, 0.4);
+      z-index: 99;
       display: flex;
       justify-content: center;
       align-items: center;
       flex-direction: column;
+      gap: 40px;
+      box-shadow: 0 0 40px 10px rgba(0, 0, 0, 0.5);
+      .pop-up {
+        box-shadow: 0 0 75px 30px rgba(0, 0, 0, 0.7);
 
-      .row {
-        display: flex;
+        .pause-heading {
+          @include for-text(second-headline);
+        }
+        .pause-icon {
+          // position: absolute;
+          // top: 50%;
+          // left: 50%;
+          // transform: translate(-50%, -50%);
+          display: flex;
+          gap: 22.5px;
+          z-index: 1;
 
-        .cell {
-          position: relative;
-          width: $cellSize;
-          height: $cellSize;
-          overflow: hidden;
-
-          &.last-checker::before {
-            content: "";
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            width: calc($cellSize * 0.13);
-            height: calc($cellSize * 0.13);
-            border-radius: 50%;
-            transform: translate(-50%, -50%);
-            background: darken($light-background, 10);
-            z-index: 1;
-          }
-
+          &::before,
           &::after {
             content: "";
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            width: calc($cellSize * 0.75);
-            height: calc($cellSize * 0.75);
-            border-radius: 50%;
-            transform: translate(-50%, -50%);
-            background: var(--after-color, transparent);
+            width: 22.5px;
+            height: 90px;
+            background-color: $light-background;
+            display: block;
           }
-
-          &.hovered-by-player-1::after {
-            background-color: rgba(var(--player-color-1), 0.4);
-          }
-          &.hovered-by-player-2::after {
-            background-color: rgba(var(--player-color-2), 0.4);
-          }
-          &.active-by-player-1::after {
-            background-color: rgb(var(--player-color-1));
-          }
-          &.active-by-player-2::after {
-            background-color: rgb(var(--player-color-2));
-          }
-
-          &.falling {
-            animation: fallAnimation $falling-duration ease-out forwards;
-          }
+        }
+        .pause-btn {
+          font-size: 1.5rem;
+          padding: 10px 30px;
+          margin-top: 20px;
+          @include for-button($bg-color: transparent, $padding: 20px 40px);
         }
       }
     }
@@ -417,25 +470,6 @@ h1 {
   }
   to {
     transform: rotateY(1980deg);
-  }
-}
-
-.pause {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  display: flex;
-  gap: 22.5px;
-  z-index: 1;
-
-  &::before,
-  &::after {
-    content: "";
-    width: 22.5px;
-    height: 90px;
-    background-color: $light-background;
-    display: block;
   }
 }
 
