--- a/src/games/connectFour/_Game.scss
+++ b/src/games/connectFour/_Game.scss
@@ -1,33 +1,43 @@
-$cellSize: 100px;
 $falling-duration: 0.5s;
 $bounce-height: 7px;
 
 .connect-four {
+  --cellSize: 100px;
+
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 20px;
   margin-bottom: 40px;
+
+  .disabled-visual {
+    opacity: 0.5;
+    cursor: not-allowed;
+  }
+
+  @include for-size(mobile) {
+    --cellSize: calc((100vw - 40px) / 7);
+    justify-content: space-around;
+    height: 100%;
+  }
+  @media screen and (max-width: 450px) {
+    --cellSize: calc((100vw - 20px) / 7);
+  }
+
   .top-bar {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 55px;
+    // height: 55px;1
     padding: 0 20px;
     position: relative;
-
+    // @include for-size(mobile) {
+    //   padding: 0 20px;
+    // }
     .left-part {
       position: absolute;
       left: 20px;
-
-      .exit-btn {
-        @include for-button(
-          $bg-color: $deny-text,
-          $text-color: $light-text,
-          $padding: 10px 20px
-        );
-      }
     }
 
     .mid-part {
@@ -41,7 +51,9 @@ $bounce-height: 7px;
         display: flex;
         gap: 20px;
         align-items: center;
-
+        @include for-size(mobile) {
+          flex-direction: row-reverse;
+        }
         div:not(.number-timer)::after {
           content: "";
           width: 100%;
@@ -73,21 +85,6 @@ $bounce-height: 7px;
       right: 20px;
       gap: 20px;
       display: flex;
-
-      .pause-btn {
-        cursor: pointer;
-        @include for-button(
-          $bg-color: darken($confirm-text, 10),
-          $padding: 10px 46px
-        );
-        &.paused {
-          background-color: $deny-text;
-        }
-      }
-
-      .restart-btn {
-        @include for-button($bg-color: $secondary, $padding: 10px 46px);
-      }
     }
     @include for-size(not-mobile) {
       &.mobile {
@@ -103,25 +100,7 @@ $bounce-height: 7px;
         justify-content: space-between;
         gap: 2px;
       }
-      .exit-btn {
-        @include for-button(
-          $bg-color: $deny-text,
-          $text-color: $light-text,
-          $padding: 10px 20px
-        );
-      }
-      .restart-btn {
-        @include for-button($bg-color: $secondary, $padding: 10px 46px);
-      }
-      .pause-btn {
-        @include for-button(
-          $bg-color: darken($confirm-text, 10),
-          $padding: 10px 46px
-        );
-        &.paused {
-          background-color: $deny-text;
-        }
-      }
+
       &:not(.mobile) .exit-btn,
       &:not(.mobile) .restart-btn,
       &:not(.mobile) .pause-btn {
@@ -135,7 +114,6 @@ $bounce-height: 7px;
         padding-right: 0;
         display: flex;
         max-width: 200px;
-        width: 33%;
         justify-content: center;
         font-size: 14px;
       }
@@ -143,6 +121,46 @@ $bounce-height: 7px;
         gap: 0;
         justify-content: space-between;
         width: 100%;
+
+        @media screen and (max-width: 410px) {
+          flex-wrap: wrap;
+          justify-content: center;
+          gap: 10px;
+
+          .nickname-display {
+            order: -1;
+            width: 100%;
+            margin-bottom: 5px;
+          }
+
+          .player-1-timers,
+          .player-2-timers {
+            width: 45%;
+            justify-content: center;
+          }
+        }
+      }
+    }
+
+    @media (max-width: 1280px) {
+      .mid-part h1 {
+        font-size: 2rem;
+      }
+      .mid-part .number-timer h1 {
+        font-size: 1.5rem;
+      }
+      .exit-btn,
+      .pause-btn,
+      .restart-btn {
+        // Styles moved to GameControls.scss but layout might need care?
+        // Actually, GameControls.scss has this exact media query (lines 191 in original)
+        // so I should probably remove it from here to avoid duplication/conflict.
+      }
+
+      .left-part,
+      .right-part {
+        display: flex;
+        align-items: center;
       }
     }
   }
@@ -152,6 +170,10 @@ $bounce-height: 7px;
     position: relative;
     padding: 20px 0;
     width: 100%;
+    @include for-size(mobile) {
+      padding: 0;
+      margin-bottom: 100px;
+    }
     .field-main {
       position: relative;
       width: fit-content;
@@ -170,8 +192,8 @@ $bounce-height: 7px;
 
           .cell {
             position: relative;
-            width: $cellSize;
-            height: $cellSize;
+            width: var(--cellSize);
+            height: var(--cellSize);
             overflow: hidden;
 
             &::after {
@@ -179,8 +201,8 @@ $bounce-height: 7px;
               position: absolute;
               top: 50%;
               left: 50%;
-              width: calc($cellSize * 0.75);
-              height: calc($cellSize * 0.75);
+              width: calc(var(--cellSize) * 0.75);
+              height: calc(var(--cellSize) * 0.75);
               background-color: transparent;
               border-radius: 50%;
               box-shadow: 0 0 0 200px #232930;
@@ -212,8 +234,8 @@ $bounce-height: 7px;
 
           .cell {
             position: relative;
-            width: $cellSize;
-            height: $cellSize;
+            width: var(--cellSize);
+            height: var(--cellSize);
             overflow: hidden;
 
             &.last-checker::before {
@@ -221,8 +243,8 @@ $bounce-height: 7px;
               position: absolute;
               top: 50%;
               left: 50%;
-              width: calc($cellSize * 0.13);
-              height: calc($cellSize * 0.13);
+              width: calc(var(--cellSize) * 0.13);
+              height: calc(var(--cellSize) * 0.13);
               border-radius: 50%;
               transform: translate(-50%, -50%);
               background: darken($light-background, 10);
@@ -234,8 +256,8 @@ $bounce-height: 7px;
               position: absolute;
               top: 50%;
               left: 50%;
-              width: calc($cellSize * 0.75);
-              height: calc($cellSize * 0.75);
+              width: calc(var(--cellSize) * 0.75);
+              height: calc(var(--cellSize) * 0.75);
               border-radius: 50%;
               transform: translate(-50%, -50%);
               background: var(--after-color, transparent);
@@ -261,98 +283,14 @@ $bounce-height: 7px;
         }
       }
     }
-    .pause-overlay {
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      backdrop-filter: blur(5px);
-      background: rgba(0, 0, 0, 0.4);
-      z-index: 99;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
-      gap: 40px;
-      box-shadow: 0 0 40px 10px rgba(0, 0, 0, 0.5);
-      .pop-up {
-        box-shadow: 0 0 75px 30px rgba(0, 0, 0, 0.7);
-
-        .pause-heading {
-          @include for-text(second-headline);
-        }
-        .pause-icon {
-          // position: absolute;
-          // top: 50%;
-          // left: 50%;
-          // transform: translate(-50%, -50%);
-          display: flex;
-          gap: 22.5px;
-          z-index: 1;
-
-          &::before,
-          &::after {
-            content: "";
-            width: 22.5px;
-            height: 90px;
-            background-color: $light-background;
-            display: block;
-          }
-        }
-        .pause-btn {
-          font-size: 1.5rem;
-          padding: 10px 30px;
-          margin-top: 20px;
-          @include for-button($bg-color: transparent, $padding: 20px 40px);
-        }
-      }
-    }
   }
 
   .pop-up {
-    position: absolute;
-    width: 500px;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: $dark-background;
-    border-radius: 5%;
-    border: 1px solid lighten($dark-background, 10);
-    transition: opacity 0.3s ease, transform 0.3s ease;
-    z-index: 10;
-
     .content {
-      width: 100%;
-      height: 100%;
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-start;
-      gap: 30px;
-      align-items: center;
-      padding: 8% 20px 20px 20px;
-
-      .heading {
-        @include for-text(second-headline);
-      }
-
-      .control-buttons {
-        display: flex;
-        justify-content: center;
-        flex-wrap: wrap;
-        gap: 20px;
-
-        .leave-btn,
-        .restart-btn,
-        .back-btn {
-          @include for-button($bg-color: $secondary, $padding: 14px 46px);
-        }
-      }
-
       .winner-checker {
         position: relative;
-        width: $cellSize;
-        height: $cellSize;
+        width: var(--cellSize);
+        height: var(--cellSize);
         overflow: hidden;
 
         &.falling {
@@ -364,8 +302,8 @@ $bounce-height: 7px;
           position: absolute;
           top: 50%;
           left: 50%;
-          width: calc($cellSize * 0.75);
-          height: calc($cellSize * 0.75);
+          width: calc(var(--cellSize) * 0.75);
+          height: calc(var(--cellSize) * 0.75);
           border-radius: 50%;
           transform: translate(-50%, -50%);
           background: rgb(var(--winner-color, transparent));
